syntax = "proto3";

option java_multiple_files = true;
option java_package = "ec.com.dinersclub.dddmodules.application.grpc";
option java_outer_classname = "PremioProto";

package grpc;

service Premio {
    rpc createPremioCommand (PremioRequest) returns (PremioResponse) {}
}

message PremioRequest {
    int32 id = 1;
    int32 idCliente = 2;
    int32 idCampania= 3;
    double valorPremio= 4;
}

message PremioResponse {
    int32 id = 1;
}